--- a/slides/06-orthproj/06-orthproj.ipynb
+++ b/slides/06-orthproj/06-orthproj.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {
-    "toc": "true"
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "title: Orthogonal Projections\n",
@@ -31,13 +29,8 @@
     "\n",
     "<img src=\"../04-vecsp/four_fundamental_subspaces.png\" width=400 align=\"center\"/>\n",
     "\n",
-    "and (2) any symmetric, idempotent matrix $\\mathbf{P}$ is the orthogonal projector onto $\\mathcal{C}(\\mathbf{P})$ (along $\\mathcal{C}(\\mathbf{P})^\\perp = \\mathcal{N}(\\mathbf{P}')$). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "and (2) any symmetric, idempotent matrix $\\mathbf{P}$ is the orthogonal projector onto $\\mathcal{C}(\\mathbf{P})$ (along $\\mathcal{C}(\\mathbf{P})^\\perp = \\mathcal{N}(\\mathbf{P}')$). \n",
+    "\n",
     "## Direct sum\n",
     "\n",
     "- The **sum of two vector spaces** $\\mathcal{S}_1$ and $\\mathcal{S}_2$ of same order is\n",
@@ -104,13 +97,8 @@
     "\n",
     "- An immediate corollary of the previous result is, for a matrix $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$, \n",
     "    1. $\\mathbb{R}^m = \\mathcal{C}(\\mathbf{A}) \\oplus \\mathcal{N}(\\mathbf{A}')$.  \n",
-    "    2. $\\mathbb{R}^n = \\mathcal{C}(\\mathbf{A}') \\oplus \\mathcal{N}(\\mathbf{A})$.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    2. $\\mathbb{R}^n = \\mathcal{C}(\\mathbf{A}') \\oplus \\mathcal{N}(\\mathbf{A})$.  \n",
+    "\n",
     "## Ortho-complementary subspaces\n",
     "\n",
     "- An **orthocomplement set** of a set $\\mathcal{X}$ (not necessarily a subspace) in a vector space $\\mathcal{V} \\subseteq \\mathbb{R}^m$ is defined as\n",
@@ -137,13 +125,8 @@
     "where the first sum belongs to $\\mathcal{S}$ and the second to $\\mathcal{S}^\\perp$.  \n",
     "    Proof of 2: Suppose $\\mathbf{x} \\in \\mathcal{S} \\cap \\mathcal{S}^\\perp$, then $\\mathbf{x} \\perp \\mathbf{x}$, i.e., $\\langle \\mathbf{x}, \\mathbf{x} \\rangle = 0$. Therefore $\\mathbf{x} = \\mathbf{0}$.  \n",
     "    Proof of 3: Statement 1 says $\\mathcal{V} = \\mathcal{S} + \\mathcal{S}^\\perp$. Statement 2 says $\\mathcal{S}$ and $\\mathcal{S}^\\perp$ are essentially disjoint. Thus $\\mathcal{V} = \\mathcal{S} \\oplus \\mathcal{S}^\\perp$.  \n",
-    "    Proof of 4: Follows from essential disjointness between $\\mathcal{S}$ and $\\mathcal{S}^\\perp$.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Proof of 4: Follows from essential disjointness between $\\mathcal{S}$ and $\\mathcal{S}^\\perp$.  \n",
+    "\n",
     "## The fundamental theorem of linear algebra\n",
     "\n",
     "- Let $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$. Then\n",
@@ -169,13 +152,8 @@
     "and\n",
     "$$\n",
     "    \\mathbb{R}^n = \\mathcal{N}(\\mathbf{A}) \\oplus \\mathcal{N}(\\mathbf{A})^\\perp = \\mathcal{N}(\\mathbf{A}) \\oplus \\mathcal{C}(\\mathbf{A}').\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "$$\n",
+    "\n",
     "## Orthogonal projections\n",
     "\n",
     "<img src=\"three_projs.png\" width=600 align=\"center\"/>\n",
@@ -197,13 +175,8 @@
     "&\\ge& \\|\\mathbf{y} - \\mathbf{u}\\|^2.\n",
     "\\end{eqnarray*}\n",
     "    \n",
-    "- Let $\\mathbb{R}^n = \\mathcal{S} \\oplus \\mathcal{S}^\\perp$. A square matrix $\\mathbf{P}_{\\mathcal{S}}$ is called the **orthogonal porjector** into $\\mathcal{S}$ if, for every $\\mathbf{y} \\in \\mathbb{R}^n$, $\\mathbf{P}_{\\mathcal{S}} \\mathbf{y}$ is the projection of $\\mathbf{y}$ into $\\mathcal{S}$ along $\\mathcal{S}^\\perp$.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Let $\\mathbb{R}^n = \\mathcal{S} \\oplus \\mathcal{S}^\\perp$. A square matrix $\\mathbf{P}_{\\mathcal{S}}$ is called the **orthogonal porjector** into $\\mathcal{S}$ if, for every $\\mathbf{y} \\in \\mathbb{R}^n$, $\\mathbf{P}_{\\mathcal{S}} \\mathbf{y}$ is the projection of $\\mathbf{y}$ into $\\mathcal{S}$ along $\\mathcal{S}^\\perp$.  \n",
+    "\n",
     "## Orthogonal projector into a column space\n",
     "\n",
     "Let $\\mathbf{X} = \\begin{pmatrix} | & & | \\\\ \\mathbf{x}_1 & \\dots & \\mathbf{x}_p \\\\ | & & | \\end{pmatrix} \\in \\mathbb{R}^{n \\times p}$. We construct the orthogonal projector $\\mathbf{P}$ into $\\mathcal{C}(\\mathbf{X})$ using different ways.\n",
@@ -246,7 +219,7 @@
     "    \\mathbf{P}_{\\mathbf{X}} = \\mathbf{X} (\\mathbf{X}' \\mathbf{X})^{-1} \\mathbf{X}'.\n",
     "$$\n",
     "\n",
-    "    Proof of 1: Since the orthogonal projection of $\\mathbf{y}$ into $\\mathcal{C}(\\mathbf{X})$ lives in $\\mathcal{C}(\\mathbf{X})$, thus can be written as $\\mathbf{u} = \\mathbf{X} \\boldsymbol{\\beta}$ for some $\\boldsymbol{\\beta} \\in \\mathbb{R}^p$. Furthermore, $\\mathbf{v} = \\mathbf{y} - \\mathbf{X} \\boldsymbol{\\beta} \\in \\mathcal{C}(\\mathbf{X})^\\perp$ is orthogonal to any vectors in $\\mathcal{C}(\\mathbf{X})$ including the columns of $\\mathbf{X}$. Thus\n",
+    "    Proof of 1: Since the orthogonal projection of $\\mathbf{y}$ into $\\mathcal{C}(\\mathbf{X})$ lives in $\\mathcal{C}(\\mathbf{X})$, thus can be written as $\\mathbf{X} \\boldsymbol{\\beta}$ for some $\\boldsymbol{\\beta} \\in \\mathbb{R}^p$. Furthermore, $\\mathbf{y} - \\mathbf{X} \\boldsymbol{\\beta} \\in \\mathcal{C}(\\mathbf{X})^\\perp$ is orthogonal to any vectors in $\\mathcal{C}(\\mathbf{X})$ including the columns of $\\mathbf{X}$. Thus\n",
     "$$\n",
     "    \\mathbf{X}' (\\mathbf{y} - \\mathbf{X} \\boldsymbol{\\beta}) = \\mathbf{0},\n",
     "$$\n",
@@ -255,26 +228,16 @@
     "    \\mathbf{X}' \\mathbf{X} \\boldsymbol{\\beta} = \\mathbf{X}' \\mathbf{y}.\n",
     "$$\n",
     "\n",
-    "    Proof of 2: If $\\mathbf{X}$ has full column rank, $\\mathbf{X}' \\mathbf{X}$ is non-singular and the solution to the normal equation is uniquely determined by $\\boldsymbol{\\beta} = (\\mathbf{X}' \\mathbf{X})^{-1} \\mathbf{X}' \\mathbf{y}$, and the orthogonal projection is $\\mathbf{u} = \\mathbf{X} \\boldsymbol{\\beta} = \\mathbf{X} (\\mathbf{X}' \\mathbf{X})^{-1} \\mathbf{X}' \\mathbf{y}$. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Proof of 2: If $\\mathbf{X}$ has full column rank, $\\mathbf{X}' \\mathbf{X}$ is non-singular and the solution to the normal equation is uniquely determined by $\\boldsymbol{\\beta} = (\\mathbf{X}' \\mathbf{X})^{-1} \\mathbf{X}' \\mathbf{y}$, and the orthogonal projection is $\\mathbf{u} = \\mathbf{X} \\boldsymbol{\\beta} = \\mathbf{X} (\\mathbf{X}' \\mathbf{X})^{-1} \\mathbf{X}' \\mathbf{y}$. \n",
+    "\n",
     "## Uniqueness of orthogonal projector\n",
     "\n",
     "We have multiple ways to construct an orthogonal projector into $\\mathcal{C}(\\mathbf{X})$. This leaves the natural question: are orthogonal projectors into the same vector space unique? The answer is a happy yes.\n",
     "\n",
     "- Theorem: Let $\\mathbf{P}_{1}$ and $\\mathbf{P}_2$ be two orthogonal projectors into a vector space $\\mathcal{S}$. Then $\\mathbf{P}_{1}=\\mathbf{P}_2$.\n",
     "\n",
-    "    Proof: By the uniqueness of the decomposition of direct sums, $\\mathbf{P}_1 \\mathbf{e}_i$ = $\\mathbf{P}_2 \\mathbf{e}_i$ for all $i$. Thus $\\mathbf{P}_{1}=\\mathbf{P}_2$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Proof: By the uniqueness of the decomposition of direct sums, $\\mathbf{P}_1 \\mathbf{e}_i$ = $\\mathbf{P}_2 \\mathbf{e}_i$ for all $i$. Thus $\\mathbf{P}_{1}=\\mathbf{P}_2$.\n",
+    "\n",
     "## Any symmetric, idempotent matrix is an orthogonal projector\n",
     "\n",
     "By the construction of orthogonal projector $\\mathbf{P} = \\mathbf{Q} \\mathbf{Q}'$, we see $\\mathbf{P}$ is symmetric and **idempotent**\n",
