--- a/slides/07-matinv/07-matinv.ipynb
+++ b/slides/07-matinv/07-matinv.ipynb
@@ -321,8 +321,8 @@
     "    & & \\mathbf{A} \\mathbf{x} = \\mathbf{b} \\\\\n",
     "    &\\Leftrightarrow& \\mathbf{A} \\mathbf{x} = \\mathbf{A} \\mathbf{A}^- \\mathbf{b} \\\\\n",
     "    &\\Leftrightarrow& \\mathbf{A} (\\mathbf{x} - \\mathbf{A}^- \\mathbf{b}) = \\mathbf{0} \\\\\n",
-    "    &\\Leftrightarrow& \\mathbf{x} - \\mathbf{A}^- \\mathbf{b} = (\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q} \\\\\n",
-    "    &\\Leftrightarrow& \\mathbf{x} = \\mathbf{A}^- \\mathbf{b} + (\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q}.\n",
+    "    &\\Leftrightarrow& \\mathbf{x} - \\mathbf{A}^- \\mathbf{b} = (\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q} \\text{ for some } \\mathbf{q} \\in \\mathbb{R}^n \\\\\n",
+    "    &\\Leftrightarrow& \\mathbf{x} = \\mathbf{A}^- \\mathbf{b} + (\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q} \\text{ for some } \\mathbf{q} \\in \\mathbb{R}^n.\n",
     "    \\end{eqnarray*}\n",
     "\r",
     "- Corollary: $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ is consistent for _all_ $\\mathbf{b}$ if and only if $\\mathbf{A}$ has full row rank.\n",
@@ -331,11 +331,23 @@
     "\n",
     "## Invertible matrix\n",
     "\n",
-    "- If a square $\\mathbf{A}$ has full row and column rank, then $\\mathbf{A}$ is invertible (or nonsingular).\n",
+    "Assume that a square $\\mathbf{A} \\in \\mathbb{R}^n$ has full row and column rank.\n",
     "\n",
-    "    The generalized inverse $\\mathbf{A}^-$ is unique, denoted by $\\mathbf{A}^{-1}$.\n",
+    "- If a square $\\mathbf{A}$ has full row and column rank, then $\\mathbf{A}$ is **invertible** (or **nonsingular**).\n",
     "\n",
-    "    For any $\\mathbf{b}$, the unique solution is $\\mathbf{A}^{-1} \\mathbf{b}$.\n",
+    "- Consider the left inverse $\\mathbf{X}$ that satisifies $\\mathbf{X} \\mathbf{A} = \\mathbf{I}$ and the right inverse $\\mathbf{Y}$ that satisfies $\\mathbf{A} \\mathbf{Y} = \\mathbf{I}$. Both left and right inverses exist (why?) and they are equal:\n",
+    "$$\n",
+    "\\mathbf{X} = \\mathbf{X} \\mathbf{I} = \\mathbf{X} \\mathbf{A} \\mathbf{Y} = \\mathbf{I} \\mathbf{Y} = \\mathbf{Y}.\n",
+    "$$\n",
+    "Uniqueness of the left and right inverse follows from uniqueness of the basis expansion. \n",
+    "\n",
+    "- We say that $\\mathbf{A}$ is **invertible** (or **nonsingular**), and denote the (left and right) **inverse** by $\\mathbf{A}^{-1}$.\n",
+    "\n",
+    "- The generalized inverse $\\mathbf{A}^-$ is unique, which is the same as $\\mathbf{A}^{-1}$.\n",
+    "\n",
+    "    Proof: Let $\\mathbf{G}_1$ and $\\mathbf{G}_2$ be two generalized inverses of $\\mathbf{A}$. Then $\\mathbf{A} \\mathbf{G}_1 \\mathbf{A} = \\mathbf{A}$ and $\\mathbf{A} \\mathbf{G}_2 \\mathbf{A} = \\mathbf{A}$. Multiplying both equations by $\\mathbf{A}^{-1}$ on the left and right, we obtain $\\mathbf{G}_1 = \\mathbf{A}^{-1} = \\mathbf{G}_2$.\n",
+    "\n",
+    "- For any $\\mathbf{b}$, the unique solution is $\\mathbf{A}^{-1} \\mathbf{b}$.\n",
     "\n",
     "### Examples of matrix inverse\n",
     "\n",
