--- a/slides/07-matinv/07-matinv.ipynb
+++ b/slides/07-matinv/07-matinv.ipynb
@@ -260,9 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Linear equations\n",
     "\n",
@@ -283,11 +281,11 @@
     "### When is there a solution to $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$?\n",
     "\n",
     "- Theorem: The following statements are equivalent.\n",
-    "\r",
+    "\n",
     "    1. The linear system $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ has a solution (**consistent**).\n",
-    "\r",
+    "\n",
     "    2. $\\mathbf{b} \\in {\\cal C}(\\mathbf{A})$.\n",
-    " \r",
+    " \n",
     "    3. $\\text{rank}((\\mathbf{A} \\,\\, \\mathbf{b})) = \\text{rank}(\\mathbf{A})$.\n",
     "    \n",
     "    4. $\\mathbf{A} \\mathbf{A}^- \\mathbf{b} = \\mathbf{b}$.\n",
@@ -308,10 +306,10 @@
     "\n",
     "- Now for the inhomogenous case $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$.\n",
     "\n",
-    "    Theorem: If $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ is consistent, then $\\tilde{\\mathbf{x}}$ is a solution if and only if\r",
-    "    $$\r",
-    "      \\tilde{\\mathbf{x}} = \\mathbf{A}^- \\mathbf{b} + (\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q} \r",
-    "    $$\r",
+    "    Theorem: If $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ is consistent, then $\\tilde{\\mathbf{x}}$ is a solution if and only if\n",
+    "    $$\n",
+    "      \\tilde{\\mathbf{x}} = \\mathbf{A}^- \\mathbf{b} + (\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q} \n",
+    "    $$\n",
     "    for some $\\mathbf{q} \\in \\mathbb{R}^n$.\n",
     "\n",
     "    Interpretation: **a specific solution** + **a vector in $\\mathcal{N}(\\mathbf{A})$**.\n",
@@ -324,14 +322,14 @@
     "    &\\Leftrightarrow& \\mathbf{x} - \\mathbf{A}^- \\mathbf{b} = (\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q} \\text{ for some } \\mathbf{q} \\in \\mathbb{R}^n \\\\\n",
     "    &\\Leftrightarrow& \\mathbf{x} = \\mathbf{A}^- \\mathbf{b} + (\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q} \\text{ for some } \\mathbf{q} \\in \\mathbb{R}^n.\n",
     "    \\end{eqnarray*}\n",
-    "\r",
+    "\n",
     "- Corollary: $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ is consistent for _all_ $\\mathbf{b}$ if and only if $\\mathbf{A}$ has full row rank.\n",
     "\n",
     "- Corollary: If a system is consistent, its solution is unique if and only if $\\mathbf{b}$ has full column rank.\n",
     "\n",
     "## Invertible matrix\n",
     "\n",
-    "Assume that a square $\\mathbf{A} \\in \\mathbb{R}^n$ has full row and column rank.\n",
+    "Assume that a square $\\mathbf{A} \\in \\mathbb{R}^{n \\times n}$ has full row and column rank.\n",
     "\n",
     "- If a square $\\mathbf{A}$ has full row and column rank, then $\\mathbf{A}$ is **invertible** (or **nonsingular**).\n",
     "\n",
@@ -382,13 +380,8 @@
     "- Inverse of matrix product. If $\\mathbf{A}$ and $\\mathbf{B}$ are invertible, then\n",
     "$$\n",
     "(\\mathbf{A} \\mathbf{B})^{-1} = \\mathbf{B}^{-1} \\mathbf{A}^{-1}.\n",
-    "$$  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "$$  \n",
+    "\n",
     "## Solving linear equations - triangular systems\n",
     "\n",
     "- To solve $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$, where $\\mathbf{A} \\in \\mathbb{R}^{n \\times n}$ is **lower triangular**\n",
