--- a/slides/08-ls/08-ls.ipynb
+++ b/slides/08-ls/08-ls.ipynb
@@ -30,15 +30,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/github.com/ucla-biostat-216/2022fall/slides/06-matinv`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m new project at `~/Documents/github.com/ucla-biostat-216/2023fall/slides/08-ls`\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1mStatus\u001b[22m\u001b[39m `~/Documents/github.com/ucla-biostat-216/2022fall/slides/06-matinv/Project.toml`\n",
-      " \u001b[90m [37e2e46d] \u001b[39mLinearAlgebra\n"
+      "\u001b[32m\u001b[1mStatus\u001b[22m\u001b[39m `~/Documents/github.com/ucla-biostat-216/2023fall/slides/08-ls/Project.toml` (empty project)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Documents/github.com/ucla-biostat-216/2023fall/slides/08-ls/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Documents/github.com/ucla-biostat-216/2023fall/slides/08-ls/Manifest.toml`\n"
      ]
     }
    ],
@@ -64,9 +71,11 @@
    "source": [
     "## Method of least squares\n",
     "\n",
-    "- In previous lecture, we study when does a linear equation $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ have solution and how to characterize all the solutions. What if $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ is **inconsistent**, that is there is no solution? \n",
+    "- In the previous lecture, we study when does a linear equation $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ have solution and how to characterize all the solutions.  \n",
+    "  \n",
+    "- What if $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ is **inconsistent**, i.e., there is no solution?  \n",
     "\n",
-    "- A sensible question to ask is can we find an $\\mathbf{x}$ such that $\\mathbf{A} \\mathbf{x}$ approximates $\\mathbf{b}$ best? The method of least squares (due to Gauss) seeks to minimize\n",
+    "    A sensible question to ask is can we find an $\\mathbf{x}$ such that $\\mathbf{A} \\mathbf{x}$ approximates $\\mathbf{b}$ best? The **method of least squares** (due to Gauss) seeks to minimize\n",
     "\\begin{eqnarray*}\n",
     "Q(\\mathbf{x}) &=& \\|\\mathbf{b} - \\mathbf{A} \\mathbf{x}\\|^2 \\\\\n",
     "&=& (\\mathbf{b} - \\mathbf{A} \\mathbf{x})' (\\mathbf{b} - \\mathbf{A} \\mathbf{x}) \\\\\n",
@@ -101,11 +110,12 @@
     "\\end{eqnarray*}\n",
     "Therefore $\\mathbf{b} = \\mathbf{A} \\hat{\\mathbf{x}} + (\\mathbf{b} - \\mathbf{A} \\hat{\\mathbf{x}})$ where $\\mathbf{A} \\hat{\\mathbf{x}} \\in \\mathcal{C}(\\mathbf{A})$ and $\\mathbf{b} - \\mathbf{A} \\hat{\\mathbf{x}} \\in \\mathcal{C}(\\mathbf{A})^\\perp$. In other words, $\\mathbf{A} \\hat{\\mathbf{x}}$ is the orthogonal projection of $\\mathbf{b}$ into $\\mathcal{C}(\\mathbf{A})$. Then by the cloest point theorem, we know $Q(\\mathbf{x})$ is minimized by $\\hat{\\mathbf{x}}$.\n",
     "\n",
-    "- The direct argument also reveals that the _fitted values_ $\\mathbf{A} \\hat{\\mathbf{x}}$ is invariant to the choice of the solution to the normal equation.\n",
+    "- The direct argument also reveals that the _fitted values_ $\\hat{\\mathbf{b}} = \\mathbf{A} \\hat{\\mathbf{x}}$ is invariant to the choice of the solution to the normal equation.\n",
     "\n",
     "- Now we know the normal equation is always consistent and we want to find all solution(s). In general the least squares solution can be represented as\n",
     "\\begin{eqnarray*}\n",
-    "(\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}' \\mathbf{b} + [\\mathbf{I} - (\\mathbf{A}' \\mathbf{A})^- (\\mathbf{A}' \\mathbf{A})] \\mathbf{q}\n",
+    "& & (\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}' \\mathbf{b} + [\\mathbf{I} - (\\mathbf{A}' \\mathbf{A})^- (\\mathbf{A}' \\mathbf{A})] \\mathbf{q} \\\\\n",
+    "&=& (\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}' \\mathbf{b} + (\\mathbf{I} - \\mathbf{A}^- \\mathbf{A}') \\mathbf{q},\n",
     "\\end{eqnarray*}\n",
     "where $\\mathbf{q}$ is arbitrary. One specific solution is \n",
     "\\begin{eqnarray*}\n",
@@ -129,11 +139,11 @@
     "\n",
     "    Proof: HW4.\n",
     "\n",
-    "- $\\mathbf{A} (\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}'$ is the orthogonal projector onto $\\mathcal{C}(\\mathbf{A})$.\n",
+    "- $\\mathbf{P}_{\\mathbf{A}} = \\mathbf{A} (\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}'$ is the orthogonal projector onto $\\mathcal{C}(\\mathbf{A})$.\n",
     "\n",
     "    Since orthogonal projection is unique, $\\mathbf{A} (\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}'$ is invariant to the choice of the generalized inverse $(\\mathbf{A}' \\mathbf{A})^-$ and thus can be denoted by $\\mathbf{P}_{\\mathbf{A}}$.\n",
     "\n",
-    "- Whichever least squares solution $\\hat{\\mathbf{x}}$ we use, the fitted value $\\hat{\\mathbf{b}} = \\mathbf{A} \\hat{\\mathbf{x}} = \\mathbf{A} (\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}' \\mathbf{b}$ is the same.\n",
+    "- Whichever least squares solution $\\hat{\\mathbf{x}}$ we use, the fitted value $\\hat{\\mathbf{b}} = \\mathbf{A} \\hat{\\mathbf{x}} = \\mathbf{A} (\\mathbf{A}' \\mathbf{A})^- \\mathbf{A}' \\mathbf{b} = \\mathbf{P}_{\\mathbf{A}} \\mathbf{b}$ is the same.\n",
     "\n",
     "- Geometry: The fitted value from the least squares solution $\\hat{\\mathbf{b}} = \\mathbf{P}_{\\mathbf{A}} \\mathbf{b}$ is the orthogonal projection of the response vector $\\mathbf{b}$ onto the column space $\\mathcal{C}(\\mathbf{A})$.\n",
     "\n",
@@ -148,7 +158,7 @@
     "\n",
     "Assume $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$ has full column rank and $\\mathbf{b} \\in \\mathbb{R}^m$.\n",
     "\n",
-    "- Step 1: Compute the (thin) QR factorization $\\mathbf{A} = \\mathbf{Q} \\mathbf{R}$.\n",
+    "- Step 1: Compute the (thin) QR factorization e.g., by [Gram–Schmidt](https://ucla-biostat-216.github.io/2023fall/slides/02-vector/02-vector.html#how-to-orthonormalize-a-set-of-vectors-gram-schmidt-algorithm) or [Household algorithm](https://ucla-biostat-216.github.io/2023fall/hw/hw4/hw4.html#q3-household-reflections) (HW4): $\\mathbf{A} = \\mathbf{Q} \\mathbf{R}$.\n",
     "\n",
     "- Step 2: Compute $\\mathbf{Q}' \\mathbf{b}$.\n",
     "\n",
