--- a/slides/07-matinv/07-matinv.ipynb
+++ b/slides/07-matinv/07-matinv.ipynb
@@ -30,15 +30,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/github.com/ucla-biostat-216/2022fall/slides/06-matinv`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/github.com/ucla-biostat-216/2023fall/slides/07-matinv`\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1mStatus\u001b[22m\u001b[39m `~/Documents/github.com/ucla-biostat-216/2022fall/slides/06-matinv/Project.toml`\n",
-      " \u001b[90m [37e2e46d] \u001b[39mLinearAlgebra\n"
+      "\u001b[32m\u001b[1mStatus\u001b[22m\u001b[39m `~/Documents/github.com/ucla-biostat-216/2023fall/slides/07-matinv/Project.toml`\n",
+      "  \u001b[90m[37e2e46d] \u001b[39mLinearAlgebra\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -142,7 +142,7 @@
        "  1   1"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -167,7 +167,7 @@
        "  0.777778   0.888889  -1.22222"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -192,7 +192,7 @@
        "  0.777778   0.888889  -1.22222"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -224,7 +224,7 @@
        " 0.0      -0.588348"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -249,7 +249,7 @@
        "  0.777778   0.888889  -1.22222"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,6 +303,16 @@
     "    Proof: _If_: Apparently $(\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q}$ is a solution regardless value of $\\mathbf{q}$ since $\\mathbf{A} (\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) = \\mathbf{A} - \\mathbf{A} = \\mathbf{0}$. _Only if_: If $\\tilde{\\mathbf{x}}$ is a solution, then $\\tilde{\\mathbf{x}} = (\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}) \\mathbf{q}$ by taking $\\mathbf{q} = \\tilde{\\mathbf{x}}$.\n",
     "\n",
     "- Rephrasing above result, we have $\\mathcal{N}(\\mathbf{A}) = \\mathcal{C}(\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A})$. \n",
+    "\n",
+    "- Remarks (optional):\n",
+    "\n",
+    "    1. The matrix $\\mathbf{I}_n - \\mathbf{A}^- \\mathbf{A}$ is idempotent and is an oblique projection onto $\\mathcal{N}(\\mathbf{A})$.\n",
+    " \n",
+    "    2. The matrix $\\mathbf{I}_n - \\mathbf{A}^+ \\mathbf{A}$ is symmetric and idempotent and is an orthogonal projection onto $\\mathcal{N}(\\mathbf{A})$.\n",
+    " \n",
+    "    3. The matrix $\\mathbf{A} \\mathbf{A}^-$ is idempotent and is an oblique projection onto $\\mathcal{C}(\\mathbf{A})$.\n",
+    " \n",
+    "    4. The matrix $\\mathbf{A} \\mathbf{A}^+$ is symmetric and idempotent and is an orthogonal projection onto $\\mathcal{C}(\\mathbf{A})$.\n",
     "\n",
     "- Now for the inhomogenous case $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$.\n",
     "\n",
@@ -440,11 +450,11 @@
     "## Solving linear equations by QR\n",
     "\n",
     "- For an invertible matrix $\\mathbf{A} \\in \\mathbb{R}^{n \\times n}$ and $\\mathbf{b} \\in \\mathbb{R}^n$, we can solve the linear equation $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ by following steps.  \n",
-    "    - Step 1: Compute QR factorization: $\\mathbf{A} = \\mathbf{Q} \\mathbf{R}$. $2n^3$ flops.  \n",
+    "    - Step 1: Compute QR factorization, e.g., by [Gram–Schmidt](https://ucla-biostat-216.github.io/2023fall/slides/02-vector/02-vector.html#how-to-orthonormalize-a-set-of-vectors-gram-schmidt-algorithm) or [Household algorithm](https://ucla-biostat-216.github.io/2023fall/hw/hw4/hw4.html#q3-household-reflections) (HW4): $\\mathbf{A} = \\mathbf{Q} \\mathbf{R}$. $2n^3$ flops.  \n",
     "    - Step 2: Compute $\\mathbf{Q}' \\mathbf{b}$. $2n^2$ flops.  \n",
     "    - Step 3: Solve the triangular equation $\\mathbf{R} \\mathbf{x} = \\mathbf{Q}' \\mathbf{b}$ by back substitution. $n^2$ flops.   \n",
     "    \n",
-    "    The total number of flops is $2n^3 + 3n^2$. The dominant step is $2n^3$.\n",
+    "    The total number of flops is $2n^3 + 3n^2 \\approx 2n^3$.\n",
     "    \n",
     "- Factor-solve method with multiple right-hand sides. For multiple right hand sides $\\mathbf{b}$, we only need to do Step 1 once.\n",
     "\n",
@@ -462,6 +472,8 @@
     "$$\n",
     "\\mathbf{A} = \\mathbf{L} \\mathbf{U}.\n",
     "$$\n",
+    "\n",
+    "Remark: In practice, LU decomposition is used much less frequently than Cholesky decomposition in statistics and machinear learning because $\\mathbf{A}$ is almost always symmetric and positive semidefinite in applications.\n",
     "\n",
     "### Gaussian elimination (GE)\n",
     "\n",
@@ -527,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +551,7 @@
        " -2.0   1.0   2.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +576,7 @@
        "  -3.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -584,10 +596,10 @@
        "3-element Vector{Float64}:\n",
        "  2.0000000000000004\n",
        "  2.9999999999999996\n",
-       " -0.9999999999999994"
+       " -0.9999999999999991"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +633,7 @@
        " -1.0  4.0  1.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +663,7 @@
        " 0.0  0.0  -1.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +690,7 @@
        "true"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,12 +720,14 @@
     "$$\n",
     "where $\\mathbf{P}$ is a permutation matrix. All multipliers $\\ell_{ij}$ in $\\mathbf{L}$ has magnitude $\\le 1$.\n",
     "\n",
-    "- Total computational cost of LU decomposition is $(2/3)n^3$ flops."
+    "- Total computational cost of LU decomposition is $(2/3)n^3$ flops.\n",
+    "\n",
+    "- Remark: Total computational cost of the Cholesky decomposition is $(1/3)n^3$ flops."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +739,7 @@
        " -2.0   1.0   2.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +769,7 @@
        "  0.0   0.0      0.2"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +792,7 @@
        " 1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +812,7 @@
        "true"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
