--- a/slides/07-matinv/07-matinv.qmd
+++ b/slides/07-matinv/07-matinv.qmd
@@ -166,6 +166,16 @@ where $\mathbf{A} \in \mathbb{R}^{m \times n}$ (coefficient matrix), $\mathbf{x}
 
 - Rephrasing above result, we have $\mathcal{N}(\mathbf{A}) = \mathcal{C}(\mathbf{I}_n - \mathbf{A}^- \mathbf{A})$. 
 
+- Remarks (optional):
+
+    1. The matrix $\mathbf{I}_n - \mathbf{A}^- \mathbf{A}$ is idempotent and is an oblique projection onto $\mathcal{N}(\mathbf{A})$.
+ 
+    2. The matrix $\mathbf{I}_n - \mathbf{A}^+ \mathbf{A}$ is symmetric and idempotent and is an orthogonal projection onto $\mathcal{N}(\mathbf{A})$.
+ 
+    3. The matrix $\mathbf{A} \mathbf{A}^-$ is idempotent and is an oblique projection onto $\mathcal{C}(\mathbf{A})$.
+ 
+    4. The matrix $\mathbf{A} \mathbf{A}^+$ is symmetric and idempotent and is an orthogonal projection onto $\mathcal{C}(\mathbf{A})$.
+
 - Now for the inhomogenous case $\mathbf{A} \mathbf{x} = \mathbf{b}$.
 
     Theorem: If $\mathbf{A} \mathbf{x} = \mathbf{b}$ is consistent, then $\tilde{\mathbf{x}}$ is a solution if and only if
@@ -302,11 +312,11 @@ $n^2$ flops.
 ## Solving linear equations by QR
 
 - For an invertible matrix $\mathbf{A} \in \mathbb{R}^{n \times n}$ and $\mathbf{b} \in \mathbb{R}^n$, we can solve the linear equation $\mathbf{A} \mathbf{x} = \mathbf{b}$ by following steps.  
-    - Step 1: Compute QR factorization: $\mathbf{A} = \mathbf{Q} \mathbf{R}$. $2n^3$ flops.  
+    - Step 1: Compute QR factorization, e.g., by [Gram–Schmidt](https://ucla-biostat-216.github.io/2023fall/slides/02-vector/02-vector.html#how-to-orthonormalize-a-set-of-vectors-gram-schmidt-algorithm) or [Household algorithm](https://ucla-biostat-216.github.io/2023fall/hw/hw4/hw4.html#q3-household-reflections) (HW4): $\mathbf{A} = \mathbf{Q} \mathbf{R}$. $2n^3$ flops.  
     - Step 2: Compute $\mathbf{Q}' \mathbf{b}$. $2n^2$ flops.  
     - Step 3: Solve the triangular equation $\mathbf{R} \mathbf{x} = \mathbf{Q}' \mathbf{b}$ by back substitution. $n^2$ flops.   
     
-    The total number of flops is $2n^3 + 3n^2$. The dominant step is $2n^3$.
+    The total number of flops is $2n^3 + 3n^2 \approx 2n^3$.
     
 - Factor-solve method with multiple right-hand sides. For multiple right hand sides $\mathbf{b}$, we only need to do Step 1 once.
 
@@ -324,6 +334,8 @@ In this section, we (1) review the Gaussian elimination (GE) for solving linear 
 $$
 \mathbf{A} = \mathbf{L} \mathbf{U}.
 $$
+
+Remark: In practice, LU decomposition is used much less frequently than Cholesky decomposition in statistics and machinear learning because $\mathbf{A}$ is almost always symmetric and positive semidefinite in applications.
 
 ### Gaussian elimination (GE)
 
@@ -440,6 +452,8 @@ $$
 where $\mathbf{P}$ is a permutation matrix. All multipliers $\ell_{ij}$ in $\mathbf{L}$ has magnitude $\le 1$.
 
 - Total computational cost of LU decomposition is $(2/3)n^3$ flops.
+
+- Remark: Total computational cost of the Cholesky decomposition is $(1/3)n^3$ flops.
 
 ```{julia}
 A
