--- a/slides/07-matinv/07-matinv.ipynb
+++ b/slides/07-matinv/07-matinv.ipynb
@@ -335,7 +335,7 @@
     "\n",
     "- Corollary: $\\mathbf{A} \\mathbf{x} = \\mathbf{b}$ is consistent for _all_ $\\mathbf{b}$ if and only if $\\mathbf{A}$ has full row rank.\n",
     "\n",
-    "- Corollary: If a system is consistent, its solution is unique if and only if $\\mathbf{b}$ has full column rank.\n",
+    "- Corollary: If a system is consistent, its solution is unique if and only if $\\mathbf{A}$ has full column rank.\n",
     "\n",
     "## Invertible matrix\n",
     "\n",
