--- a/slides/08-ls/08-ls.ipynb
+++ b/slides/08-ls/08-ls.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "- **Normal equation**. To find the minimum, we take derivative and set the gradient to zero\n",
     "$$\n",
-    "\\nabla Q(\\mathbf{b}) = -2 \\mathbf{A}' \\mathbf{b} + 2 \\mathbf{A}' \\mathbf{A} \\mathbf{x} = \\mathbf{0}.\n",
+    "\\nabla Q(\\mathbf{x}) = -2 \\mathbf{A}' \\mathbf{b} + 2 \\mathbf{A}' \\mathbf{A} \\mathbf{x} = \\mathbf{0}.\n",
     "$$\n",
     "This leads to the normal equation\n",
     "$$\n",
@@ -147,13 +147,8 @@
     "\n",
     "- Geometry: The fitted value from the least squares solution $\\hat{\\mathbf{b}} = \\mathbf{P}_{\\mathbf{A}} \\mathbf{b}$ is the orthogonal projection of the response vector $\\mathbf{b}$ onto the column space $\\mathcal{C}(\\mathbf{A})$.\n",
     "\n",
-    "- Decomposition of $\\mathbf{b} = \\mathbf{P}_{\\mathbf{A}} \\mathbf{b} + (\\mathbf{I} - \\mathbf{P}_{\\mathbf{A}}) \\mathbf{b} = \\hat{\\mathbf{b}} + \\hat{\\mathbf{e}}$, where $\\hat{\\mathbf{b}} \\perp \\hat{\\mathbf{e}}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Decomposition of $\\mathbf{b} = \\mathbf{P}_{\\mathbf{A}} \\mathbf{b} + (\\mathbf{I} - \\mathbf{P}_{\\mathbf{A}}) \\mathbf{b} = \\hat{\\mathbf{b}} + \\hat{\\mathbf{e}}$, where $\\hat{\\mathbf{b}} \\perp \\hat{\\mathbf{e}}$.\n",
+    "\n",
     "## Solve least squares problems by QR\n",
     "\n",
     "Assume $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$ has full column rank and $\\mathbf{b} \\in \\mathbb{R}^m$.\n",
@@ -168,6 +163,13 @@
     "\n",
     "- Total number of flops is $2mn^2 + 2mn + n^2 \\approx 2mn^2$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
