--- a/hw/hw4/hw4.ipynb
+++ b/hw/hw4/hw4.ipynb
@@ -23,40 +23,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Submit a PDF (scanned/photographed from handwritten solutions, or converted from RMarkdown or Jupyter Notebook or Quarto) to Gradescope in BruinLearn. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Submit a PDF (scanned/photographed from handwritten solutions, or converted from RMarkdown or Jupyter Notebook or Quarto) to Gradescope in BruinLearn. \n",
+    "\n",
     "## Q1\n",
     "\n",
     "For any $\\mathbf{X} \\in \\mathbb{R}^{n \\times p}$ and $\\mathbf{y} \\in \\mathbb{R}^n$, show that the normal equation \n",
     "$$\n",
     "\\mathbf{X}' \\mathbf{X} \\boldsymbol{\\beta} = \\mathbf{X}' \\mathbf{y}\n",
     "$$\n",
-    "always have at least one solution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "always have at least one solution.\n",
+    "\n",
     "## Q2\n",
     "\n",
     "Let $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$.\n",
     "\n",
     "1. Show that for any generalized inverse $\\mathbf{A}^-$, we have $\\text{rank}(\\mathbf{A}^-) \\ge \\text{rank}(\\mathbf{A})$.\n",
     "\n",
-    "2. Show that the Moore-Penrose inverse $\\mathbf{A}^+$ has the same rank as $\\mathbf{A}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Q3 Household reflections\n",
+    "2. Show that the Moore-Penrose inverse $\\mathbf{A}^+$ has the same rank as $\\mathbf{A}$.\n",
+    "\n",
+    "## Q3 Householder reflections\n",
     "\n",
     "Let $\\mathbf{v} \\in \\mathbb{R}^n$. Define the **Householder reflection matrix**\n",
     "$$\n",
@@ -78,19 +63,14 @@
     "\\mathbf{H} \\mathbf{a} = \\begin{pmatrix} a_1 \\\\ \\|\\mathbf{a}_{2:n}\\| \\\\ \\mathbf{0}_{n-2} \\end{pmatrix}.\n",
     "$$\n",
     "\n",
-    "5. Let $\\mathbf{A} \\in \\mathbb{R}^{n \\times p}$. Describe how to find a sequence of Householder matrices $\\mathbf{H}_1, \\ldots, \\mathbf{H}_{p-1}$ such that\n",
+    "5. Let $\\mathbf{A} \\in \\mathbb{R}^{n \\times p}$. Describe how to find a sequence of Householder matrices $\\mathbf{H}_1, \\ldots, \\mathbf{H}_{p}$ such that\n",
     "$$\n",
-    "\\mathbf{H}_{p-1} \\mathbf{H}_{p-2} \\cdots \\mathbf{H}_1 \\mathbf{A} = \\mathbf{R},\n",
+    "\\mathbf{H}_{p} \\mathbf{H}_{p-1} \\cdots \\mathbf{H}_1 \\mathbf{A} = \\mathbf{R},\n",
     "$$\n",
     "where $\\mathbf{R} \\in \\mathbb{R}^{n \\times p}$ is an upper triangular matrix.\n",
     "\n",
-    "    Describe how this generates a full QR decomposition of matrix $\\mathbf{A} = \\mathbf{Q} \\mathbf{R}$, where $\\mathbf{Q} \\in \\mathbb{R}^{n \\times n}$ is an orthogonal matrix and $\\mathbf{R}$ is upper triangular."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Describe how this generates a full QR decomposition of matrix $\\mathbf{A} = \\mathbf{Q} \\mathbf{R}$, where $\\mathbf{Q} \\in \\mathbb{R}^{n \\times n}$ is an orthogonal matrix and $\\mathbf{R}$ is upper triangular.\n",
+    "\n",
     "## Q4 Missile tracking\n",
     "\n",
     "A missile is fired from enemy territory, and its position in flight is observed by radar tracking devices at the following positions.\n",
@@ -101,13 +81,8 @@
     "\n",
     "Suppose that intelligence sources indicate that enemy missiles are programmed to follow a parabolic flight path: $y = f(x) = \\alpha_0 + \\alpha_1 x + \\alpha_2 x$. Where is the missile expected to land? Hint: You can find the solution using computer program. For example, in Julia, least squares solution is obtained by command `A \\ b`.\n",
     "\n",
-    "![](missile.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "![](missile.png)\n",
+    "\n",
     "## BV exercises\n",
     "\n",
     "12.2, 12.3"
