slides for pd matrices

--- a/_posts/2023-11-09-week6-day2.md
+++ b/_posts/2023-11-09-week6-day2.md
@@ -6,7 +6,7 @@ category: biostat216fall2023
 
 ## Announcement
 
-- HW4, Q3.2. Householder reflection. Thanks to Hsin Ying, Yijia, and Hanbei.
+- HW4, Q3.2. Householder reflection.
 
 - HW4, Q3.5, typo. 
 
