--- a/slides/09-det/09-det.ipynb
+++ b/slides/09-det/09-det.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {
-    "toc": "true"
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "title: Determinant (BR Chapter 10)\n",
@@ -235,6 +233,7 @@
     "<img src=\"./determinant.png\" width=400 align=\"center\"/>\n",
     "\n",
     "- Interpretation of the (absolute value of) determinant as the **volume of the parallelotope** defined by the columns of the matrix. For example, if $\\mathbf{X} \\in \\mathbb{R}^2$ has two columns $\\mathbf{x}_1$ and $\\mathbf{x}_2$, then\n",
+    "\n",
     "\\begin{eqnarray*}\n",
     "\t\\text{area} &=& bh = \\|\\mathbf{x}_1\\|\\|\\mathbf{x}_2\\| \\sin(\\theta) \\\\\n",
     "\t&=& \\|\\mathbf{x}_1\\| \\|\\mathbf{x}_2\\| \\sqrt{1 - \\left( \\frac{\\langle \\mathbf{x}_1, \\mathbf{x}_2 \\rangle}{\\|\\mathbf{x}_1\\| \\|\\mathbf{x}_2\\|} \\right)^2} \\\\\n",
@@ -271,13 +270,8 @@
     "    For an example of $n=1$, an indefinite integral can be transformed to a definite integral over box [-1,1] via change of variable $v = u / (1-u^2)$:\n",
     "$$\n",
     "\\int_{-\\infty}^\\infty f(v) \\, dv = \\int_{-1}^1 f\\left(\\frac{u}{1-u^2}\\right) \\frac{1+u^2}{(1-u^2)^2} \\, du.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "$$\n",
+    "\n",
     "## Some properties of determinant (important)\n",
     "\n",
     "- The determinant of a **lower or upper triangular matrix** $\\mathbf{A}$ is the product of the diagonal elements $\\prod_{i=1}^n a_{ii}$. (Why?)\n",
@@ -573,10 +567,10 @@
     "\n",
     "- Determinant of a permutation matrix is the sign of the corresponding permutation. \n",
     "\n",
-    "- Determinant of diagonal block matrix\n",
+    "- Determinant of triangular block matrix\n",
     "\\begin{eqnarray*}\n",
     "\t\\det \\left( \\begin{pmatrix}\n",
-    "\t\\mathbf{A} & \\mathbf{O} \\\\\n",
+    "\t\\mathbf{A} & \\mathbf{B} \\\\\n",
     "\t\\mathbf{O} & \\mathbf{D}\n",
     "\t\\end{pmatrix} \\right) = \\det (\\mathbf{A}) \\det (\\mathbf{D}).\n",
     "\\end{eqnarray*}\n",
